# Simple-socket-chat-

./: .gitignore  CMakeLists.txt  README.md
include/: client.hpp  common.hpp  server.hpp
src/: CMakeLists.txt  client.cpp  main_client.cpp  main_server.cpp  server.cpp
